# v3

./: .env.example  .gitignore  CLAUDE.md  README.md  analytics-dashboard-build-plan.md  backend-pressure-test-plan.md  docker-compose.prod.yml  docker-compose.yml
backend/: Dockerfile  pyproject.toml  scale_bench.py
backend/app/: config.py  db.py  derived_dims.py  main.py  models.py  schemas.py  worker.py
backend/app/api/: backpop.py  charts.py  data.py  dims_metrics.py
backend/app/backpop/: __init__.py  duckdb_writer.py  scheduler.py
backend/app/connections/: duckdb.py  postgres.py  redshift.py
backend/app/crud/: charts.py  dims_metrics.py
backend/app/formulas/: __init__.py
backend/app/introspection/: __init__.py
backend/app/serving/: __init__.py
backend/app/templating/: __init__.py
backend/tests/: conftest.py  test_backpop.py  test_charts.py  test_derived_dims.py  test_dim_values.py  test_dims_metrics.py  test_formula_serving.py  test_formulas.py  test_freshness.py  test_health.py  test_independent_metrics.py  test_initial_backpop.py  test_introspection.py  test_scheduler.py  test_serving.py  test_templating.py
backend/tests/pressure/: conftest.py  golden.py  helpers.py  oracle.py  reconcile.py  test_phase_1_health.py  test_phase_2_crud.py  test_phase_3_introspection.py  test_phase_4_backpop.py  test_phase_5_serving.py  test_phase_6_independent.py  test_phase_7_formula.py  test_pressure_smoke.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  (+1 more)
nginx/: Dockerfile  nginx.conf
(+34 files in other folders)
